--- a/02_Model_Training.ipynb
+++ b/02_Model_Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "687d68d6",
    "metadata": {},
    "outputs": [
@@ -70,33 +70,33 @@
       "Features after selection: 100\n",
       "\n",
       "Top 20 most informative features:\n",
-      "ft7003: 0.037120\n",
-      "ft8630: 0.031534\n",
-      "ft7167: 0.030494\n",
-      "ft1681: 0.030205\n",
-      "ft3087: 0.029362\n",
-      "ft1215: 0.028145\n",
-      "ft2934: 0.027412\n",
-      "ft8382: 0.027335\n",
-      "ft6555: 0.027107\n",
-      "ft192: 0.026859\n",
-      "ft5892: 0.026147\n",
-      "ft1369: 0.025817\n",
-      "ft2792: 0.025804\n",
-      "ft7282: 0.025616\n",
-      "ft5216: 0.025375\n",
-      "ft805: 0.024980\n",
-      "ft5937: 0.024643\n",
-      "ft5137: 0.023784\n",
-      "ft7221: 0.023260\n",
-      "ft2800: 0.022800\n",
+      "ft5775: 0.046159\n",
+      "ft4418: 0.043294\n",
+      "ft4218: 0.035645\n",
+      "ft5227: 0.035205\n",
+      "ft7296: 0.034368\n",
+      "ft1322: 0.030957\n",
+      "ft3807: 0.030847\n",
+      "ft7046: 0.030479\n",
+      "ft132: 0.028289\n",
+      "ft4331: 0.027615\n",
+      "ft77: 0.026637\n",
+      "ft6645: 0.026366\n",
+      "ft260: 0.024460\n",
+      "ft922: 0.024032\n",
+      "ft2747: 0.023334\n",
+      "ft4469: 0.023205\n",
+      "ft6478: 0.022968\n",
+      "ft5632: 0.022427\n",
+      "ft4474: 0.022357\n",
+      "ft2939: 0.022184\n",
       "\n",
       "Scaling features...\n",
       "\n",
       "=== Training and evaluating models ===\n",
       "\n",
       "1. Training Extra Trees Classifier\n",
-      "Best parameters: {'n_estimators': 100, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_depth': None, 'bootstrap': False}\n",
+      "Best parameters: {'n_estimators': 200, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_depth': 30, 'bootstrap': False}\n",
       "\n",
       "Extra Trees Results:\n",
       "Accuracy: 1.0000\n",
@@ -117,18 +117,169 @@
       "ROC AUC: 1.0000\n",
       "\n",
       "Top 10 most important features:\n",
-      "fval_cos_10d: 0.180547\n",
-      "change_threshold_exceeded: 0.074578\n",
-      "fval_cos_10d_interaction: 0.066538\n",
-      "large_change_no_threshold_score: 0.059509\n",
-      "fval_sin_20d: 0.054841\n",
-      "fval_cos_20d: 0.041484\n",
-      "large_change_no_threshold_magnitude: 0.038999\n",
-      "day_in_ssn_x_large_change_no_threshold_score: 0.033375\n",
-      "fval_change: 0.032219\n",
-      "fval_sin_20d_interaction: 0.028290\n",
+      "fval_cos_10d: 0.157853\n",
+      "change_threshold_exceeded: 0.088206\n",
+      "large_change_no_threshold_score: 0.070166\n",
+      "fval_cos_10d_interaction: 0.061561\n",
+      "fval_sin_20d: 0.048745\n",
+      "fval_cos_20d: 0.047775\n",
+      "large_change_no_threshold_magnitude: 0.041993\n",
+      "fval_change: 0.034195\n",
+      "fval_diff_lag_1: 0.026793\n",
+      "fval_diff_lag_1_x_large_change_no_threshold_score: 0.025132\n",
       "\n",
-      "2. Training Gradient Boosting Classifier\n"
+      "2. Training Gradient Boosting Classifier\n",
+      "Best parameters: {'subsample': 0.8, 'n_estimators': 300, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_depth': 3, 'learning_rate': 0.05}\n",
+      "\n",
+      "Gradient Boosting Results:\n",
+      "Accuracy: 1.0000\n",
+      "F1 Score: 1.0000\n",
+      "Confusion Matrix:\n",
+      "[[190   0]\n",
+      " [  0 194]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       190\n",
+      "           1       1.00      1.00      1.00       194\n",
+      "\n",
+      "    accuracy                           1.00       384\n",
+      "   macro avg       1.00      1.00      1.00       384\n",
+      "weighted avg       1.00      1.00      1.00       384\n",
+      "\n",
+      "ROC AUC: 1.0000\n",
+      "\n",
+      "Top 10 most important features:\n",
+      "fval_cos_10d: 0.232564\n",
+      "fval_diff_lag_1: 0.210987\n",
+      "min_boundary_approach_rate: 0.177215\n",
+      "fval_cos_10d_interaction: 0.073226\n",
+      "fval_change_x_weighted_anomaly_score: 0.067740\n",
+      "fval_change: 0.048754\n",
+      "fval_diff_lag_1_x_min_boundary_approach_score: 0.047345\n",
+      "fval_diff_lag_1_x_weighted_anomaly_score: 0.046157\n",
+      "fval_change_jerk: 0.038678\n",
+      "fval_change_x_min_boundary_approach_score: 0.016249\n",
+      "\n",
+      "3. Training Random Forest Classifier\n",
+      "Best parameters: {'n_estimators': 300, 'min_samples_split': 5, 'min_samples_leaf': 1, 'max_depth': None, 'bootstrap': False}\n",
+      "\n",
+      "Random Forest Results:\n",
+      "Accuracy: 0.9818\n",
+      "F1 Score: 0.9823\n",
+      "Confusion Matrix:\n",
+      "[[183   7]\n",
+      " [  0 194]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.96      0.98       190\n",
+      "           1       0.97      1.00      0.98       194\n",
+      "\n",
+      "    accuracy                           0.98       384\n",
+      "   macro avg       0.98      0.98      0.98       384\n",
+      "weighted avg       0.98      0.98      0.98       384\n",
+      "\n",
+      "ROC AUC: 0.9967\n",
+      "\n",
+      "Top 10 most important features:\n",
+      "fval_change_x_min_boundary_approach_score: 0.080581\n",
+      "fval_diff_lag_1_x_weighted_anomaly_score: 0.078898\n",
+      "min_boundary_approach_rate: 0.074989\n",
+      "fval_change: 0.067304\n",
+      "fval_cos_10d: 0.061758\n",
+      "fval_diff_lag_1_x_min_boundary_approach_score: 0.061212\n",
+      "fval_diff_lag_1: 0.060080\n",
+      "fval_change_x_weighted_anomaly_score: 0.059356\n",
+      "fval_cos_10d_interaction: 0.039242\n",
+      "fval_change_jerk: 0.032572\n",
+      "\n",
+      "4. Training XGBoost Classifier\n",
+      "Best parameters: {'subsample': 0.8, 'n_estimators': 300, 'min_child_weight': 3, 'max_depth': 3, 'learning_rate': 0.05, 'gamma': 0.2, 'colsample_bytree': 0.8}\n",
+      "\n",
+      "XGBoost Results:\n",
+      "Accuracy: 1.0000\n",
+      "F1 Score: 1.0000\n",
+      "Confusion Matrix:\n",
+      "[[190   0]\n",
+      " [  0 194]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       190\n",
+      "           1       1.00      1.00      1.00       194\n",
+      "\n",
+      "    accuracy                           1.00       384\n",
+      "   macro avg       1.00      1.00      1.00       384\n",
+      "weighted avg       1.00      1.00      1.00       384\n",
+      "\n",
+      "ROC AUC: 1.0000\n",
+      "\n",
+      "Top 10 most important features:\n",
+      "fval_change_x_min_boundary_approach_score: 0.251147\n",
+      "fval_change_x_weighted_anomaly_score: 0.213853\n",
+      "fval_diff_lag_1: 0.138876\n",
+      "min_boundary_approach_rate: 0.095491\n",
+      "fval_diff_lag_1_x_weighted_anomaly_score: 0.081626\n",
+      "fval_change: 0.060498\n",
+      "fval_diff_lag_1_x_min_boundary_approach_score: 0.039495\n",
+      "fval_cos_10d: 0.018906\n",
+      "fval_change_jerk: 0.013844\n",
+      "fval_cos_10d_interaction: 0.009540\n",
+      "\n",
+      "5. Training Logistic Regression\n",
+      "Best parameters: {'solver': 'liblinear', 'penalty': 'l1', 'max_iter': 2000, 'C': 1000.0}\n",
+      "\n",
+      "Logistic Regression Results:\n",
+      "Accuracy: 0.8516\n",
+      "F1 Score: 0.8586\n",
+      "Confusion Matrix:\n",
+      "[[154  36]\n",
+      " [ 21 173]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.81      0.84       190\n",
+      "           1       0.83      0.89      0.86       194\n",
+      "\n",
+      "    accuracy                           0.85       384\n",
+      "   macro avg       0.85      0.85      0.85       384\n",
+      "weighted avg       0.85      0.85      0.85       384\n",
+      "\n",
+      "ROC AUC: 0.9234\n",
+      "\n",
+      "6. Training Voting Classifier Ensemble\n",
+      "Top 3 models for ensemble: ['ExtraTrees', 'GradientBoosting', 'XGBoost']\n",
+      "\n",
+      "Voting Classifier Results:\n",
+      "Accuracy: 1.0000\n",
+      "F1 Score: 1.0000\n",
+      "Confusion Matrix:\n",
+      "[[190   0]\n",
+      " [  0 194]]\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       190\n",
+      "           1       1.00      1.00      1.00       194\n",
+      "\n",
+      "    accuracy                           1.00       384\n",
+      "   macro avg       1.00      1.00      1.00       384\n",
+      "weighted avg       1.00      1.00      1.00       384\n",
+      "\n",
+      "ROC AUC: 1.0000\n",
+      "\n",
+      "=== Model Performance Summary ===\n",
+      "\n",
+      "Models ranked by F1 score:\n",
+      "1. Extra Trees: Accuracy = 1.0000, F1 = 1.0000\n",
+      "2. Gradient Boosting: Accuracy = 1.0000, F1 = 1.0000\n",
+      "3. XGBoost: Accuracy = 1.0000, F1 = 1.0000\n",
+      "4. Voting Classifier: Accuracy = 1.0000, F1 = 1.0000\n",
+      "5. Random Forest: Accuracy = 0.9818, F1 = 0.9823\n",
+      "6. Logistic Regression: Accuracy = 0.8516, F1 = 0.8586\n",
+      "\n",
+      "Best model (Extra Trees) saved as 'best_model_Extra_Trees.pkl'\n"
      ]
     }
    ],
@@ -585,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d3fe7486",
    "metadata": {},
    "outputs": [
@@ -610,7 +761,7 @@
       "Moved XGBoost_confusion_matrix.png to dfigures/\n",
       "Moved XGBoost_feature_importance.png to dfigures/\n",
       "Moved XGBoost_roc_curve.png to dfigures/\n",
-      "Moved best_model_Gradient_Boosting.pkl to models/\n",
+      "Moved best_model_Extra_Trees.pkl to models/\n",
       "Organization complete. 16 figures moved to 'dfigures' folder and 1 models moved to 'models' folder.\n"
      ]
     }
